<resources>
    <string name="app_name">Vedaaz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account">My Account</string>
    <string name="menu_mysubscri">My Subscriptions</string>
    <string name="menu_pausesubscri">Pause Subscriptions</string>
    <string name="menu_adhocsubscri">AdHoc Subscriptions</string>
    <string name="menu_categort">Shop By Category</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_rateourapp">Rate our app</string>
    <string name="menu_needhelp">Need help?</string>
    <string name="menu_referandearn">Refer and Earn</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
</resources>
